--- a/style.css
+++ b/style.css
@@ -38,4 +38,21 @@
   -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
 }
+
+.pumpkin {
+  -webkit-clip-path: circle();
+          clip-path: circle();
+  -webkit-filter: grayscale(50%);
+          filter: grayscale(50%);
+  width: 40rem;
+  height: 30rem;
+  margin: 3rem;
+}
+
+.pumpkin:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
 /*# sourceMappingURL=style.css.map */
