--- a/style.scss
+++ b/style.scss
@@ -25,3 +25,14 @@
   color: rgb(133, 15, 15);
   transform: rotate(360deg);
 }
+.pumpkin {
+  clip-path: circle();
+  filter: grayscale(50%);
+  width: 40rem;
+  height: 30rem;
+  margin: 3rem;
+}
+.pumpkin:hover {
+  transform: scale(1.3);
+  transition: all 0.3s;
+}
