--- a/style.scss
+++ b/style.scss
@@ -27,12 +27,13 @@
 }
 .pumpkin {
   clip-path: circle();
-  filter: grayscale(50%);
   width: 40rem;
   height: 30rem;
-  margin: 3rem;
+  margin: 5rem;
+  cursor: pointer;
 }
 .pumpkin:hover {
-  transform: scale(1.3);
+  filter: grayscale(50%);
+  transform: scale(1.2);
   transition: all 0.3s;
 }
