better collage positioning

--- a/style.scss
+++ b/style.scss
@@ -37,3 +37,45 @@
   transform: scale(1.2);
   transition: all 0.3s;
 }
+.pumpkin:hover::after {
+  transform: scale(0.9);
+  transition-delay: 1s;
+}
+.spookygallery {
+  margin: 3rem;
+  position: relative;
+}
+.spookyimg {
+  position: absolute;
+  height: 20rem;
+  box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.4);
+  transition: all 0.3s;
+  outline-offset: 1rem;
+}
+.spookyimg:hover {
+  transform: scale(1.3);
+  box-shadow: 0 3rem 1rem rgba(0, 0, 0, 0.4);
+  z-index: 2;
+  outline-style: 1rem groove color(red);
+}
+.spookygallery:hover .spookyimg:not(:hover) {
+  transform: scale(0.8);
+  opacity: 0.3;
+}
+.SI1 {
+  top: 60rem;
+  left: 55%;
+}
+.SI2 {
+  top: 55rem;
+  left: 25rem;
+}
+.SI3 {
+  top: 50rem;
+  left: 50rem;
+}
+.SI4 {
+  top: 70rem;
+  left: 40rem;
+  height: 10rem;
+}
