--- a/style.css
+++ b/style.css
@@ -57,13 +57,6 @@
   transition: all 0.3s;
 }
 
-.pumpkin:hover::after {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
-
 .spookygallery {
   margin: 3rem;
   position: relative;
@@ -72,11 +65,9 @@
 .spookyimg {
   position: absolute;
   height: 20rem;
-  -webkit-box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.4);
-          box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.4);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  outline-offset: 1rem;
+  padding: 1rem;
 }
 
 .spookyimg:hover {
@@ -85,7 +76,8 @@
   -webkit-box-shadow: 0 3rem 1rem rgba(0, 0, 0, 0.4);
           box-shadow: 0 3rem 1rem rgba(0, 0, 0, 0.4);
   z-index: 2;
-  outline-style: 1rem groove color(red);
+  border: dotted red;
+  border-width: 3px 3px;
 }
 
 .spookygallery:hover .spookyimg:not(:hover) {
@@ -95,7 +87,7 @@
 }
 
 .SI1 {
-  top: 60rem;
+  top: 65rem;
   left: 55%;
 }
 
@@ -113,5 +105,33 @@
   top: 70rem;
   left: 40rem;
   height: 10rem;
+}
+
+.icon {
+  margin-top: 45rem;
+  width: 15rem;
+  background-color: black;
+}
+
+.icon:before {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  z-index: -1;
+}
+
+.icon:hover::before {
+  -webkit-box-shadow: 0 0 15px #ffee10;
+          box-shadow: 0 0 15px #ffee10;
+}
+
+.icon:hover {
+  color: #ffee10;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-box-shadow: 0 0 5px #ffee10;
+          box-shadow: 0 0 5px #ffee10;
+  text-shadow: 0 0 5px #ffee10;
 }
 /*# sourceMappingURL=style.css.map */
