--- a/style.scss
+++ b/style.scss
@@ -33,9 +33,9 @@
   cursor: pointer;
 }
 .pumpkin:hover {
-  filter: grayscale(50%);
   transform: scale(1.2);
   transition: all 0.3s;
+  filter: grayscale(50%);
 }
 .spookygallery {
   margin: 3rem;
@@ -85,15 +85,18 @@
   transform: scale(0.9);
   z-index: -1;
 }
-.icon:hover::before {
-  box-shadow: 0 0 15px #ffee10;
-}
 .icon:hover {
-  // color: #ffee10;
-  // transform: scale(1.2);
-  // box-shadow: 0 0 5px #ffee10;
-  // text-shadow: 0 0 5px #ffee10;
   background-color: #fff;
   box-shadow: 0 0 60px 30px black, 0 0 50px 30px #c31432, 0 0 70px 45px #240b36;
   transform: scale(1.3);
+}
+
+.rainbow-picture {
+  width: 30rem;
+  margin: 6rem;
+  filter: grayscale(100%);
+}
+.rainbow-picture:hover {
+  filter: grayscale(0%);
+  transform: scale(1.2);
 }
